--- a/newbie/meet-landing-page/index.html
+++ b/newbie/meet-landing-page/index.html
@@ -54,7 +54,7 @@
             decoding="async"
           />
         </div>
-        <div class="title">
+        <article class="title">
           <h1>Group Chat for Everyone</h1>
           <p>
             Meet makes it easy to connect with others face-to-face virtually and
@@ -64,7 +64,7 @@
             <button class="cyan-button">Download <span>v1.3</span></button>
             <button class="purple-button">What is it?</button>
           </div>
-        </div>
+        </article>
       </section>
     </header>
 
@@ -112,18 +112,18 @@
           />
         </div>
 
-        <div class="first-section-details">
-          <div class="first-section-title">
+        <article class="first-section-details">
+          <article class="first-section-title">
             <p>Built for modern use</p>
             <h2>Smarter meetings, all in one place</h2>
-          </div>
+          </article>
 
-          <div class="summary">
+          <article class="summary">
             Send messages, share files, show your screen, and record your
             meetings — all in one workspace. Control who can join with
             invite-only team access, data encryption, and data export.
-          </div>
-        </div>
+          </article>
+        </article>
       </section>
 
       <section class="second-section">
@@ -136,14 +136,14 @@
 
         <div class="img-background">
           <div class="cyan-background">
-            <div class="second-section-details">
+            <article class="second-section-details">
               <h2>Experience more together</h2>
               <p>
                 Stay connected with reliable HD meetings and unlimited
                 one-on-one and group video sessions.
               </p>
               <button class="purple-button">Download <span>v1.3</span></button>
-            </div>
+            </article>
           </div>
         </div>
       </section>
