--- a/newbie/meet-landing-page/index.html
+++ b/newbie/meet-landing-page/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header>
-      <section class="logo">
+      <div class="logo">
         <img
           src="assets/logo.svg"
           alt="Meet logo"
@@ -31,9 +31,9 @@
           decoding="sync"
           loading="eager"
         />
-      </section>
+      </div>
 
-      <section class="header-details">
+      <div class="header-details">
         <div class="hero-imgs" aria-hidden="true">
           <img
             class="hero-left"
@@ -54,7 +54,7 @@
             decoding="async"
           />
         </div>
-        <article class="title">
+        <section class="title">
           <h1>Group Chat for Everyone</h1>
           <p>
             Meet makes it easy to connect with others face-to-face virtually and
@@ -64,12 +64,12 @@
             <button class="cyan-button">Download <span>v1.3</span></button>
             <button class="purple-button">What is it?</button>
           </div>
-        </article>
-      </section>
+        </section>
+      </div>
     </header>
 
     <main>
-      <section class="first-section">
+      <div class="first-section">
         <div class="numbered-circles">
           <hr />
           <div class="circle">
@@ -79,54 +79,54 @@
 
         <div class="grouped-imgs" aria-hidden="true">
           <img
-            src="assets\desktop\image-woman-in-videocall.jpg"
+            src="assets/desktop/image-woman-in-videocall.jpg"
             alt="Woman in videocall"
-            width="147.5"
+            width="147"
             height="144"
             loading="lazy"
             decoding="async"
           />
           <img
-            src="assets\desktop\image-women-videochatting.jpg"
+            src="assets/desktop/image-women-videochatting.jpg"
             alt="Women facetiming"
-            width="147.5"
+            width="147"
             height="144"
             loading="lazy"
             decoding="async"
           />
           <img
-            src="assets\desktop\image-men-in-meeting.jpg"
+            src="assets/desktop/image-men-in-meeting.jpg"
             alt="Men in a meeting"
-            width="147.5"
+            width="147"
             height="144"
             loading="lazy"
             decoding="async"
           />
           <img
-            src="assets\desktop\image-man-texting.jpg"
+            src="assets/desktop/image-man-texting.jpg"
             alt="Man texting"
-            width="147.5"
+            width="147"
             height="144"
             loading="lazy"
             decoding="async"
           />
         </div>
 
-        <article class="first-section-details">
+        <div class="first-section-details">
           <article class="first-section-title">
             <p>Built for modern use</p>
             <h2>Smarter meetings, all in one place</h2>
           </article>
 
-          <article class="summary">
+          <p class="summary">
             Send messages, share files, show your screen, and record your
             meetings — all in one workspace. Control who can join with
             invite-only team access, data encryption, and data export.
-          </article>
-        </article>
-      </section>
+          </p>
+        </div>
+      </div>
 
-      <section class="second-section">
+      <div class="second-section">
         <div class="numbered-circles">
           <hr />
           <div class="circle">
@@ -146,7 +146,7 @@
             </article>
           </div>
         </div>
-      </section>
+      </div>
     </main>
   </body>
 </html>
