--- a/newbie/meet-landing-page/index.html
+++ b/newbie/meet-landing-page/index.html
@@ -18,7 +18,7 @@
     />
     <link rel="stylesheet" href="styles/style.css" />
 
-    <title>Frontend Mentor | Meet landing page</title>
+    <title>Meet landing page</title>
   </head>
   <body>
     <header>
