Fixed button html

--- a/newbie/article-preview-component/index.html
+++ b/newbie/article-preview-component/index.html
@@ -41,7 +41,7 @@
             <h2 class="writer-name">Michelle Appleton</h2>
             <p class="date">28 Jun 2020</p>
           </div>
-          <button id="share-button" class="share-button">
+          <button id="share-button" class="share-button" aria-label="Share">
             <svg
               width="15px"
               height="13px"
