Finished with project

--- a/junior/newsletter-signup-form/index.html
+++ b/junior/newsletter-signup-form/index.html
@@ -58,11 +58,9 @@
           <form id="form" class="form">
             <div>
               <label for="email">Email address</label>
-              <span
-                aria-live="polite"
-                id="email-error"
-                class="email-error"
-              ></span>
+              <span id="email-error" class="email-error" role="alert"
+                >Valid email required</span
+              >
               <input
                 id="email"
                 type="text"
@@ -88,8 +86,8 @@
             src="/assets/images/icon-success.svg"
             alt="Success Checkmark"
             loading="eager"
-            width="100"
-            height="100"
+            width="64"
+            height="64"
             decoding="async"
           />
 
