--- a/junior/newsletter-signup-form/index.html
+++ b/junior/newsletter-signup-form/index.html
@@ -23,11 +23,11 @@
         <picture>
           <source
             media="(min-width: 1024px)"
-            srcset="/assets/images/illustration-sign-up-desktop.svg"
+            srcset="./assets/images/illustration-sign-up-desktop.svg"
           />
           <img
             class="hero-img"
-            src="/assets/images/illustration-sign-up-mobile.svg"
+            src="./assets/images/illustration-sign-up-mobile.svg"
             alt="Sign up mobile illustration"
             loading="eager"
             width="100"
