Fixing pics again hehe

--- a/junior/newsletter-signup-form/index.html
+++ b/junior/newsletter-signup-form/index.html
@@ -23,11 +23,13 @@
         <picture>
           <source
             media="(min-width: 1024px)"
-            srcset="./assets/images/illustration-sign-up-desktop.svg"
+            srcset="
+              ../newsletter-signup-form/assets/images/illustration-sign-up-mobile.svg
+            "
           />
           <img
             class="hero-img"
-            src="./assets/images/illustration-sign-up-mobile.svg"
+            src="../newsletter-signup-form/assets/images/illustration-sign-up-mobile.svg"
             alt="Sign up mobile illustration"
             loading="eager"
             width="100"
@@ -83,7 +85,7 @@
         <div>
           <img
             class="icon-img"
-            src="/assets/images/icon-success.svg"
+            src="../newsletter-signup-form/assets/images/icon-success.svg"
             alt="Success Checkmark"
             loading="eager"
             width="64"
