Fixed pics again

--- a/junior/newsletter-signup-form/index.html
+++ b/junior/newsletter-signup-form/index.html
@@ -23,13 +23,11 @@
         <picture>
           <source
             media="(min-width: 1024px)"
-            srcset="
-              ../newsletter-signup-form/assets/images/illustration-sign-up-mobile.svg
-            "
+            srcset="./assets/images/illustration-sign-up-desktop.svg"
           />
           <img
             class="hero-img"
-            src="../newsletter-signup-form/assets/images/illustration-sign-up-mobile.svg"
+            src="./assets/images/illustration-sign-up-mobile.svg"
             alt="Sign up mobile illustration"
             loading="eager"
             width="100"
@@ -85,7 +83,7 @@
         <div>
           <img
             class="icon-img"
-            src="../newsletter-signup-form/assets/images/icon-success.svg"
+            src="./assets/images/icon-success.svg"
             alt="Success Checkmark"
             loading="eager"
             width="64"
