fixing js fetch

--- a/junior/time-tracking-dashboard/index.html
+++ b/junior/time-tracking-dashboard/index.html
@@ -26,7 +26,10 @@
     <main id="main">
       <article id="author-card" class="author-card">
         <div class="author">
-          <img src="/images/image-jeremy.png" alt="Jeremy Robson" />
+          <img
+            src="../time-tracking-dashboard/images/image-jeremy.png"
+            alt="Jeremy Robson"
+          />
           <div>
             <p>Report for</p>
             <h1>Jeremy Robson</h1>
