--- a/junior/tip-calculator-app/index.html
+++ b/junior/tip-calculator-app/index.html
@@ -24,7 +24,17 @@
     <script defer src="main.js"></script>
   </head>
   <body>
-    <header><img class="logo" src="images/logo.svg" alt="Splitter" /></header>
+    <header>
+      <img
+        class="logo"
+        src="../tip-calculator-app/images/logo.svg"
+        alt="Splitter"
+        width="100"
+        height="100"
+        decoding="async"
+        loading="eager"
+      />
+    </header>
 
     <main>
       <form id="calculator" class="calculator" novalidate>
