Changed the form tag to div to fix accessibility error

--- a/junior/tip-calculator-app/index.html
+++ b/junior/tip-calculator-app/index.html
@@ -24,6 +24,7 @@
     <script defer src="main.js"></script>
   </head>
   <body>
+    <h1>Splitter</h1>
     <header>
       <img
         class="logo"
@@ -34,11 +35,10 @@
         decoding="async"
         loading="eager"
       />
-      <h1>Splitter</h1>
     </header>
 
     <main>
-      <form id="calculator" class="calculator" novalidate>
+      <div id="calculator" class="calculator" novalidate>
         <div class="bill-amount">
           <label class="bill" for="bill">Bill</label>
           <input
@@ -82,7 +82,7 @@
             required
           />
         </div>
-      </form>
+      </div>
 
       <div id="tip-card" class="tip-card">
         <div>
