Added diff styles for h1 tag

--- a/junior/tip-calculator-app/index.html
+++ b/junior/tip-calculator-app/index.html
@@ -24,8 +24,8 @@
     <script defer src="main.js"></script>
   </head>
   <body>
-    <h1>Splitter</h1>
     <header>
+      <h1 class="visiually-hidden">Splitter</h1>
       <img
         class="logo"
         src="../tip-calculator-app/images/logo.svg"
