Fixed reset button

--- a/junior/tip-calculator-app/index.html
+++ b/junior/tip-calculator-app/index.html
@@ -53,11 +53,19 @@
         <div id="tip-percentage" class="tip-percentage">
           <label class="tip-label" for="tip"> Select Tip %</label>
           <div>
-            <button type="button" class="btn" value="0.05">5%</button>
-            <button type="button" class="btn" value="0.10">10%</button>
-            <button type="button" class="btn" value="0.15">15%</button>
-            <button type="button" class="btn" value="0.25">25%</button>
-            <button type="button" class="btn" value="0.50">50%</button>
+            <button type="button" class="btn btn-hover" value="0.05">5%</button>
+            <button type="button" class="btn btn-hover" value="0.10">
+              10%
+            </button>
+            <button type="button" class="btn btn-hover" value="0.15">
+              15%
+            </button>
+            <button type="button" class="btn btn-hover" value="0.25">
+              25%
+            </button>
+            <button type="button" class="btn btn-hover" value="0.50">
+              50%
+            </button>
             <input
               id="tip"
               name="tip"
@@ -102,7 +110,7 @@
           </section>
         </div>
 
-        <button id="reset" type="reset" class="btn reset">RESET</button>
+        <button id="reset" type="reset" class="btn" disabled>RESET</button>
       </div>
     </main>
   </body>
